<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_dog_search"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.makar1227.egida.dog.DogSearchActivity">

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:padding="@dimen/activity_horizontal_margin"
        android:text="@string/capture"
        android:textSize="@dimen/table_text" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="@dimen/activity_horizontal_margin">


        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/table_text"
            android:paddingLeft="@dimen/activity_text"
            android:paddingRight="@dimen/activity_text"
            android:paddingTop="@dimen/activity_text"
            android:text="@string/gender"

            />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:id="@+id/gender">

                <RadioButton
                    android:id="@+id/gender_girl"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/girl"
                    android:checked="true"
                    android:theme="@style/MyRadioButton"/>

                <RadioButton
                    android:id="@+id/gender_boy"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/boy"
                    android:theme="@style/MyRadioButton"
                    />

            </RadioGroup>


        </LinearLayout>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/table_text"
            android:paddingLeft="@dimen/activity_text"
            android:paddingRight="@dimen/activity_text"
            android:paddingTop="@dimen/table_text"
            android:text="@string/size" />

        <Spinner
            android:id="@+id/size"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/sizes"
            android:paddingBottom="@dimen/table_text"
            android:paddingLeft="@dimen/activity_text"
            android:paddingRight="@dimen/activity_text"
            android:paddingTop="@dimen/table_text" />


    </LinearLayout>


    <Button
        android:id="@+id/select"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/select"
        android:background="@color/colorPrimary"
        android:textColor="@color/colorWhite"/>


</LinearLayout>
