<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    tools:context="com.example.makar1227.egida.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:weightSum="5"
        android:layout_gravity="center"
        android:orientation="vertical"
        >

        <LinearLayout
            android:id="@+id/donation"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_weight="3"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="10dp"
            android:background="@color/colorPrimary"
            android:orientation="vertical">

            <TextView
                android:text="@string/donation"
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:textColor="@color/colorWhite"
                android:textSize="30dp"
                android:textAllCaps="true"
                android:textStyle="bold"
                android:textAlignment="center"
                />

            <ImageView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:src="@drawable/donation"
                android:layout_gravity="center"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/network"
            android:layout_width="match_parent"
            android:layout_weight="2"
            android:layout_height="2dp"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="5dp"
            android:background="@color/colorPrimary"
            android:orientation="vertical">

            <TextView
                android:text="@string/links"
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:textColor="@color/colorWhite"
                android:textSize="30dp"
                android:textAllCaps="true"
                android:textStyle="bold"
                android:textAlignment="center"
               />

            <ImageView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:src="@drawable/network"
                android:layout_gravity="center"/>


        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:weightSum="5"
        android:layout_gravity="center"
        android:orientation="vertical"
        >

        <LinearLayout
            android:id="@+id/pets"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_weight="2"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:background="@color/colorPrimary"
            android:orientation="vertical">

            <TextView
                android:text="@string/pick_out"
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorWhite"
                android:textSize="30dp"
                android:textAllCaps="true"
                android:textStyle="bold"
                android:textAlignment="center"
                />

            <ImageView
                android:layout_width="130dp"
                android:layout_height="130dp"
                android:src="@drawable/dog2"
                android:layout_gravity="center"/>


        </LinearLayout>

        <LinearLayout
            android:id="@+id/need"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_weight="3"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="5dp"
            android:background="@color/colorPrimary"
            android:orientation="vertical">

            <TextView
                android:text="@string/need"
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:textColor="@color/colorWhite"
                android:textSize="30dp"
                android:textAllCaps="true"
                android:textStyle="bold"
                android:textAlignment="center"
                />

            <ImageView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:src="@drawable/need"
                android:layout_gravity="center"/>


        </LinearLayout>

    </LinearLayout>

</LinearLayout>